--- a/ChatDemoUI3.0/res/layout/view_layout_title.xml
+++ b/ChatDemoUI3.0/res/layout/view_layout_title.xml
@@ -33,9 +33,11 @@
         android:id="@+id/img_right"
         android:layout_width="40dp"
         android:layout_height="30dp"
+        android:visibility="gone"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:src="@drawable/em_add"/>
     
     <Button
         android:id="@+id/btn_send"
