--- a/ChatDemoUI3.0/res/layout/em_activity_user_profile.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_user_profile.xml
@@ -5,125 +5,191 @@
     android:background="#eff2f6"
     android:orientation="vertical" >
     
-	<RelativeLayout
-        android:id="@+id/title"
+	<include layout="@layout/view_layout_title"/>
+    <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_top_bar"
-        android:background="@color/top_bar_normal_bg"
-        android:gravity="center_vertical" >
-
-        <include layout="@layout/ease_commom_back_btn" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@color/black3"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/title_user_profile"
-            android:textColor="#fff"
-            android:textSize="18sp" />
-    </RelativeLayout>
-    <LinearLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:orientation="vertical"
-        >
-        <RelativeLayout 
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            >
-            <ImageView 
-                android:id="@+id/user_head_avatar"
-                android:layout_width="60dip"
-                android:layout_height="60dip"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_margin="8dip"
-                android:scaleType="centerCrop"
-                android:src="@drawable/em_default_avatar"
-                />
-            <ImageView 
-                android:id="@+id/user_head_headphoto_update"
-                android:layout_width="wrap_content"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/user_head_avatar"
-                android:layout_alignBottom="@+id/user_head_avatar"
-                android:layout_alignRight="@+id/user_head_avatar"
-                android:layout_margin="3dip"
-                android:src="@drawable/em_profile_headphoto_update_icon"
-                />
-            
-            <LinearLayout 
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/user_head_avatar"
-                android:orientation="vertical"
-                >
-                <LinearLayout 
-                    android:layout_width="fill_parent"
+                android:id="@+id/rl_user_avatar"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dip"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    >
-                    <TextView 
-                        android:id="@+id/user_username"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:textSize="16sp"
-                        />
-                </LinearLayout>
+                    android:text="@string/userinfo_txt_avatar"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:layout_centerVertical="true"
+                    android:textSize="20sp"/>
+                <ImageView
+                    android:id="@+id/user_head_avatar"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/default_hd_avatar"
+                    android:layout_alignParentRight="true"
+                    android:layout_margin="10dp"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/black3"/>
+            <LinearLayout
+                android:id="@+id/layout_user_nick"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:text="@string/userinfo_txt_nick"
+                    />
+                <TextView
+                    android:id="@+id/tv_user_nick"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/userinfo_txt_nosettings"
+                    style="@style/list_txt_Style_without_nopadding_right"
+                    />
             </LinearLayout>
-        </RelativeLayout>
-        <View 
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/gray_pressed"
-            
-            />
-        <RelativeLayout 
-            android:id="@+id/rl_nickname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dip"
-            >
-            <TextView 
-				android:layout_width="wrap_content"                
-				android:layout_height="wrap_content"
-				android:layout_margin="5dp"
-				android:layout_alignParentLeft="true"
-				android:text="@string/nickname"
-				android:textSize="16sp"
-				android:gravity="center_vertical"
-				android:textColor="#808080"
-                android:background="#FFFFFF"
-                />
-            <TextView 
-                android:id="@+id/user_nickname"
-				android:layout_width="wrap_content"                
-				android:layout_height="wrap_content"
-				android:layout_margin="5dp"
-				android:layout_alignParentRight="true"
-				android:paddingRight="20dip"
-				android:textSize="16sp"
-				android:gravity="center_vertical"
-				android:textColor="#3366cc"
-                android:background="#FFFFFF"
-                />
-            <ImageView 
-                android:id="@+id/ic_right_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/em_ic_right_arrow"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="5dip"
-                />
-        </RelativeLayout>
-    </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/black3"/>
+            <LinearLayout
+                android:id="@+id/layout_user_wechat_No"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:text="@string/userinfo_txt_wechat_no"
+                    />
+                <TextView
+                    android:id="@+id/tv_user_wechat_No"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/userinfo_txt_nosettings"
+                    style="@style/list_txt_Style_without_nopadding_right"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/black3"/>
+            <LinearLayout
+                android:id="@+id/layout_user_qrcode"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:text="@string/userinfo_txt_qrcode"
+                    />
+                <ImageView
+                    android:id="@+id/iv_user_qrcode"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/right"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="10dp"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/black3"/>
+            <LinearLayout
+                android:id="@+id/layout_user_address"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:text="@string/userinfo_txt_address"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_user_sex"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/userinfo_txt_nosettings"
+                    style="@style/list_txt_Style_without_nopadding_right"
+                    android:layout_weight="1" />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@color/black3"/>
+            <LinearLayout
+                android:id="@+id/layout_user_sex"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:text="@string/userinfo_txt_sex"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/black3"/>
+            <LinearLayout
+                android:id="@+id/layout_user_area"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:text="@string/userinfo_txt_area"
+                    />
+                <TextView
+                    android:id="@+id/tv_user_area"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/userinfo_txt_nosettings"
+                    style="@style/list_txt_Style_without_nopadding_right"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/black3"/>
+            <LinearLayout
+                android:id="@+id/layout_user_sign"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/setting_item_selector">
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/list_txt_Style_without_nopadding"
+                    android:text="@string/userinfo_txt_sign"
+                    />
+                <TextView
+                    android:id="@+id/tv_user_sign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/userinfo_txt_noinput"
+                    style="@style/list_txt_Style_without_nopadding_right"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/black3"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
