--- a/ChatDemoUI3.0/res/layout-hdpi/main_tab_text_item.xml
+++ b/ChatDemoUI3.0/res/layout-hdpi/main_tab_text_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="@color/tab_def_title_color_selector"
+        android:textColor="#ffff7800"
         android:textSize="16sp" />
 
     <TextView
