--- a/ChatDemoUI3.0/res/layout/em_activity_add_contact.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_add_contact.xml
@@ -10,7 +10,7 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_top_bar"
-        android:background="@color/top_bar_normal_bg"
+        android:background="@color/common_bottom_bar_selected_bg"
         android:gravity="center_vertical">
 
         <include layout="@layout/ease_commom_back_btn" />
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:text="添加好友"
             android:textColor="#fff"
             android:textSize="18sp" />
         
