--- a/ChatDemoUI3.0/res/layout/activity_friend_profile.xml
+++ b/ChatDemoUI3.0/res/layout/activity_friend_profile.xml
@@ -85,7 +85,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="15dp"
-        android:background="@color/white"
+        android:background="@color/green"
         android:text="视频聊天"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -98,7 +98,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="15dp"
-        android:background="@color/white"
+        android:background="@color/green"
         android:text="加为好友"
         android:textColor="@color/black"
         android:textSize="16sp"
