--- a/ChatDemoUI3.0/res/layout/em_activity_new_group.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_new_group.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_top_bar"
-        android:background="@color/top_bar_normal_bg"
+        android:background="@color/common_bottom_bar_selected_bg"
         android:gravity="center_vertical" >
 
         <LinearLayout
@@ -71,8 +71,40 @@
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:textSize="18sp" />
-    
-    
+    <LinearLayout
+        android:id="@+id/layout_group_icon"
+        android:layout_width="match_parent"
+        android:layout_height="39dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/em_button_normal_shape"
+        >
+
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="群图标"
+            android:textColor="#333"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            />
+
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:layout_gravity="center_vertical"
+            android:scaleType="fitXY"
+            android:paddingRight="5dp"
+            android:src="@drawable/ease_group_icon"
+            />
+
+    </LinearLayout>
+
     <LinearLayout 
         android:layout_width="match_parent"
        android:layout_height="39dp"
@@ -81,6 +113,7 @@
         android:layout_marginRight="10dp"
         android:background="@drawable/em_button_normal_shape"
         >
+
         <TextView 
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
