--- a/ChatDemoUI3.0/res/values/loading_color.xml
+++ b/ChatDemoUI3.0/res/values/loading_color.xml
@@ -7,5 +7,5 @@
     <color name="view_bg">#00000000</color>
     <color name="shadow">#25808080</color>
     <color name="dialog_bg">#f5f5f5</color>
-    
+    <color name="placeholder">#ddd</color>
 </resources>
