--- a/ChatDemoUI3.0/res/layout/em_contacts_header.xml
+++ b/ChatDemoUI3.0/res/layout/em_contacts_header.xml
@@ -23,5 +23,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:contactItemImage="@drawable/em_groups_icon"
-        app:contactItemName="@string/chat_room" />
+        app:contactItemName="直播间" />
+
 </LinearLayout>
