--- a/ChatDemoUI3.0/res/values/em_strings.xml
+++ b/ChatDemoUI3.0/res/values/em_strings.xml
@@ -102,7 +102,7 @@
     <string name="Group_chat_profile">Group profile</string>
     <string name="Whether_the_public">Is public</string>
     <string name="Open_group_members_invited">Allow members to invite</string>
-    <string name="Open_group_chat">Public groups</string>
+    <string name="Open_group_chat">LIVI ROOM</string>
     <string name="join_need_owner_approval">Join need group owner approval</string>
     <string name="blacklist">Black list</string>
     <string name="serach_group_message">Search messages</string>
