--- a/ChatDemoUI3.0/res/layout/em_activity_public_groups.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_public_groups.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/common_bg"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_top_bar"
-        android:background="@color/top_bar_normal_bg"
+        android:background="@color/common_bottom_bar_normal_bg"
         android:gravity="center_vertical" >
 
         <include layout="@layout/ease_commom_back_btn" />
