--- a/ChatDemoUI3.0/res/values-zh/em_strings.xml
+++ b/ChatDemoUI3.0/res/values-zh/em_strings.xml
@@ -103,7 +103,7 @@
     <string name="Group_chat_profile">群聊简介</string>
     <string name="Whether_the_public">是否公开</string>
     <string name="Open_group_members_invited">开放群成员邀请</string>
-    <string name="Open_group_chat">公开的群聊</string>
+    <string name="Open_group_chat">直播间</string>
     <string name="join_need_owner_approval">加入公开群需要群主同意</string>
     <string name="blacklist">黑名单列表</string>
     <string name="serach_group_message">消息搜索</string>
