主播界面的头像显示

--- a/ChatDemoUI3.0/res/layout/activity_start_live.xml
+++ b/ChatDemoUI3.0/res/layout/activity_start_live.xml
@@ -34,6 +34,7 @@
           android:layout_height="30dp"
           app:ease_shape_type="round"
           android:src="@drawable/ease_default_avatar"
+          android:id="@+id/start_live_image"
           />
 
       <TextView
