--- a/ChatDemoUI3.0/res/layout/fragment_room_user_details.xml
+++ b/ChatDemoUI3.0/res/layout/fragment_room_user_details.xml
@@ -18,7 +18,8 @@
       android:gravity="center_horizontal"
       android:background="@android:color/transparent"
       >
-    <com.hyphenate.easeui.widget.EaseImageView
+    <ImageView
+        android:id="@+id/room_user_details_iv"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ease_default_avatar"
