用户界面的头像显示

--- a/ChatDemoUI3.0/res/layout/activity_live_details.xml
+++ b/ChatDemoUI3.0/res/layout/activity_live_details.xml
@@ -27,10 +27,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 >
-                <com.hyphenate.easeui.widget.EaseImageView
+                <ImageView
+                    android:id="@+id/live_details_iv"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    app:ease_shape_type="round"
                     android:src="@drawable/ease_default_avatar"
                     />
 
