主播推出显示界面

--- a/ChatDemoUI3.0/res/layout/activity_start_live.xml
+++ b/ChatDemoUI3.0/res/layout/activity_start_live.xml
@@ -187,18 +187,19 @@
       android:layout_alignParentBottom="true"
       ></RelativeLayout>
 
-  <ImageView
-      android:id="@+id/cover_image"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:visibility="invisible"
-      android:scaleType="fitXY"
-      />
-
   <ViewStub
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/finish_frame"
       android:layout="@layout/live_finish_layout"
       />
+
+  <ImageView
+      android:id="@+id/cover_image"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:visibility="invisible"
+      android:scaleType="fitXY"
+      android:layout_below="@+id/countdown_txtv"
+      android:layout_alignParentStart="true" />
 </RelativeLayout>
