--- a/ChatDemoUI3.0/res/layout/live_finish_layout.xml
+++ b/ChatDemoUI3.0/res/layout/live_finish_layout.xml
@@ -13,7 +13,8 @@
       android:orientation="vertical"
       android:gravity="center_horizontal"
       >
-    <com.hyphenate.easeui.widget.EaseImageView
+    <ImageView
+        android:id="@+id/close_iv"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ease_default_avatar"
@@ -36,6 +37,7 @@
         android:text="直播时间"
         />
     <TextView
+        android:id="@+id/live_time"
         style="@style/LiveEndTextStyle"
         android:text="32:21"
         android:layout_marginTop="5dp"
