--- a/ChatDemoUI3.0/res/layout/activity_start_live.xml
+++ b/ChatDemoUI3.0/res/layout/activity_start_live.xml
@@ -21,7 +21,8 @@
       android:id="@+id/toolbar"
       android:background="@android:color/transparent"
       app:titleTextColor="#fff"
-      style="@style/ToolbarNormal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
       >
 
     <LinearLayout
