--- a/ChatDemoUI3.0/res/layout/fragment_gift_dialog.xml
+++ b/ChatDemoUI3.0/res/layout/fragment_gift_dialog.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/gift_recycler"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="bottom">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layoutManager="android.support.v7.widget.GridLayoutManager"
-        app:spanCount="5"
-        >
+        android:orientation="vertical">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/gift_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layoutManager="android.support.v7.widget.GridLayoutManager"
+            app:spanCount="5"
+            >
 
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+        </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:text="充值"
+            android:textColor="@color/red"/>
+    </LinearLayout>
+
+</FrameLayout>
