--- a/ChatDemoUI3.0/res/values/styles.xml
+++ b/ChatDemoUI3.0/res/values/styles.xml
@@ -170,4 +170,9 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
+
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+
+    <item name="android:background">#FFFFFF</item>
+    </style>
 </resources>
